--- a/Svenska Akademin.ipynb
+++ b/Svenska Akademin.ipynb
@@ -18,15 +18,10 @@
     "1. using [Property:P5325](https://www.wikidata.org/wiki/Property:P5325)  to access the page and webscrape some data\n",
     "1. create ds with numbering and replace/replaced by\n",
     "1. use Open Refine for connect it to Wikidata\n",
-    "1. batch upload using [Quickstatement](https://quickstatements.toolforge.org/#/)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other sources we sync\n",
-    "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Uppsalakyrkogård%20kulturpersoner.ipynb)\n",
+    "1. batch upload using [Quickstatement](https://quickstatements.toolforge.org/#/)\n",
+    "\n",
+    "#### Other sources we sync\n",
+    "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
     "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
     "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
