--- a/Svenska Akademin.ipynb
+++ b/Svenska Akademin.ipynb
@@ -22,11 +22,16 @@
     "\n",
     "#### Other sources we sync\n",
     "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
-    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
+    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb) \n",
+    "  * WD property [P5101](https://www.wikidata.org/wiki/Property_talk:P5101) [P5123](https://www.wikidata.org/wiki/Property_talk:P5123)\n",
     "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
-    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
-    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
-    "* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  \n"
+    "  * WD [property 8024](https://www.wikidata.org/wiki/Property:P8024)\n",
+    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb) \n",
+    "  * WD [property 3217](https://www.wikidata.org/wiki/Property:P3217) \n",
+    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
+    "  * WD [property 4963](https://www.wikidata.org/wiki/Property:P4963)\n",
+    "* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb) \n",
+    "  * WD [property 5325](https://www.wikidata.org/wiki/Property:P5325) \n"
    ]
   },
   {
