--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-09 12:24:55.005143\n"
+      "Last run:  2020-10-10 08:34:29.147242\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
       " 10  orgName          25 non-null     object\n",
       " 11  nativeName       24 non-null     object\n",
       " 12  acronym          11 non-null     object\n",
-      " 13  founded          23 non-null     object\n",
+      " 13  founded          24 non-null     object\n",
       " 14  penName          11 non-null     object\n",
       " 15  birthCountry     1 non-null      object\n",
       " 16  birthCountryNow  1 non-null      object\n",
@@ -354,7 +354,7 @@
        "      <td>{'en': 'World Food Programme', 'no': 'Verdens ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>WFP</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>{'date': '1961-00-00', 'place': {'locationStri...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -986,7 +986,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-09 12:24:57.545638\n"
+      "End run:  2020-10-10 08:35:30.504267\n"
      ]
     }
    ],
@@ -1003,7 +1003,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.549286\n"
+      "Time elapsed (hh:mm:ss.ms) 0:01:01.362612\n"
      ]
     }
    ],
@@ -1016,12 +1016,12 @@
    "metadata": {},
    "source": [
     "#### Lesson learned\n",
-    "Its a delay when the html page is linked after the announcement --> we do this list below to check when its ready and we can add it to Wikidata\n"
+    "Its a delay when the html page is linked after the announcement --> we do this list below to check when its ready and we can add it to Wikidata and the WIkipedia article"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1031,148 +1031,148 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>awardYear</th>\n",
        "      <th>category</th>\n",
-       "      <th>linkhtml</th>\n",
        "      <th>name_en</th>\n",
        "      <th>wd</th>\n",
+       "      <th>awardYear</th>\n",
+       "      <th>linkhtml</th>\n",
        "      <th>linkjson</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>938</th>\n",
-       "      <td>2019</td>\n",
        "      <td>Literature</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/980'>html</a></td>\n",
        "      <td>Peter Handke</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q44107'>Wikidata</a></td>\n",
+       "      <td>2019</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/980'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=980'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>939</th>\n",
-       "      <td>2019</td>\n",
        "      <td>Peace</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/981'>html</a></td>\n",
        "      <td>Abiy Ahmed Ali</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q50365049'>Wikidata</a></td>\n",
+       "      <td>2019</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/981'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=981'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940</th>\n",
-       "      <td>2019</td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/982'>html</a></td>\n",
        "      <td>Abhijit Banerjee</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q320578'>Wikidata</a></td>\n",
+       "      <td>2019</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/982'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=982'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>941</th>\n",
-       "      <td>2019</td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/983'>html</a></td>\n",
        "      <td>Esther Duflo</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q434509'>Wikidata</a></td>\n",
+       "      <td>2019</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/983'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=983'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>942</th>\n",
-       "      <td>2019</td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "      <td>Michael Kremer</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
+       "      <td>2019</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "      <td>Harvey J. Alter</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "      <td>Michael Houghton</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "      <td>Charles M. Rice</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "      <td>Roger Penrose</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "      <td>Reinhard Genzel</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "      <td>Andrea Ghez</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "      <td>Emmanuelle Charpentier</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "      <td>Jennifer A. Doudna</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Literature</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "      <td>Louise Glück</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>952</th>\n",
-       "      <td>2020</td>\n",
        "      <td>Peace</td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/994'>html</a></td>\n",
        "      <td>NaN</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q204344'>Wikidata</a></td>\n",
+       "      <td>2020</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/994'>html</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=994'>json</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1182,7 +1182,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,14 +1219,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Articles using template and view statistics this year\n",
-    "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024)\n",
+    "* Articles using template and view statistics this year and during the [Nobel week](https://www.nobelprize.org/press/#/publication/5f1719e411aab40004a17f36/552bd85dccc8e20c00e7f979?&sh=false)  5-12 October 2020\n",
+    "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using\n",
+    "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024)\n",
     "  * ca:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
-    "  * en:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573140) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:Nobelprize_template_using_Wikidata_property_P8024)\n",
+    "  * en:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573140) / not using \n",
+    "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:Nobelprize_template_using_Wikidata_property_P8024) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:Nobelprize_template_using_Wikidata_property_P8024)\n",
     "  * ka:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
-    "  * nn:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573155) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://nn.wikipedia.org/wiki/Kategori:Sider_som_nyttar_Mal:Nobelprize)\n",
-    "  * pt:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573158) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024)\n",
-    "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize)\n",
+    "  * nn:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573155) / not using \n",
+    "     * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://nn.wikipedia.org/wiki/Kategori:Sider_som_nyttar_Mal:Nobelprize) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://nn.wikipedia.org/wiki/Kategori:Sider_som_nyttar_Mal:Nobelprize)\n",
+    "  * pt:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573158) / not using \n",
+    "     * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024)\n",
+    "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using \n",
+    "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize)\n",
     "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)"
    ]
   },
