--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.2 changed api call and added **Vrandečić EWS**\n",
+    "version. 0.3 changed api call added view statistics Nobel week 5-12 October 2020\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
     "\n",
     "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
@@ -455,90 +455,6 @@
     "                  columns=['id','name_en','name_se','link','gender','awardYear','category'])\n",
     "\n",
     "NobelTot.info()    \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## EWS Vrandečić  \n",
-    "* [tweet](https://twitter.com/vrandezo/status/1313587353433251840?s=20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name_en</th>\n",
-       "      <th>name_se</th>\n",
-       "      <th>link</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>awardYear</th>\n",
-       "      <th>category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [id, name_en, name_se, link, gender, awardYear, category]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NobelTot[NobelTot['name_en'].str.contains(\"Vrandečić\", na=False)] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check number of prizes received\n",
-    "NobelTot[NobelTot['name_en'].str.contains(\"Vrandečić\", na=False)][\"name_en\"].sum()\n"
    ]
   },
   {
