--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.3 changed api call added view statistics Nobel week 5-12 October 2020\n",
+    "version. 0.3 added view statistics Nobel week 5-12 October 2020\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
     "\n",
     "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
@@ -22,7 +22,7 @@
     "  * WD [property 3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
     "  * WD [property 4963](https://www.wikidata.org/wiki/Property:P4963)\n",
-    "* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb) \n",
+    "* [Svenska Akademien](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademien.ipynb) \n",
     "  * WD [property 5325](https://www.wikidata.org/wiki/Property:P5325) \n"
    ]
   },
