--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -21,7 +21,7 @@
     "  * WD [property 3217](https://www.wikidata.org/wiki/Property:P3217) \n",
     "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
     "  * WD [property 4963](https://www.wikidata.org/wiki/Property:P4963)\n",
-    "* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb) \n",
+    "* [Svenska Akademien](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademien.ipynb) \n",
     "  * WD [property 5325](https://www.wikidata.org/wiki/Property:P5325) \n",
     "\n",
     "### SBL\n",
