--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -1148,7 +1148,9 @@
     "     * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024)\n",
     "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using \n",
     "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize)\n",
-    "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)"
+    "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
+    "  \n",
+    "Task [https://phabricator.wikimedia.org/T251055 T251055]  "
    ]
   },
   {
