--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,12 +5,13 @@
    "metadata": {},
    "source": [
     "## Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.3 added view statistics Nobel week 5-12 October 2020\n",
+    "version. 0.4 added video and view statistics for Nobelweek 5-12 October 2020\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
     "\n",
     "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
-    "  * [Developer xone nobelprize.org](https://www.nobelprize.org/about/developer-zone-2/)\n",
+    "  * [Developer zone nobelprize.org](https://www.nobelprize.org/about/developer-zone-2/)\n",
     "      * maybe better API is [api.nobelprize.org/2.0/laureates](https://api.nobelprize.org/2.0/laureates)\n",
+    "  * [video](https://youtu.be/Iu1JtefueM8) explaining what we do\n",
     "      \n",
     "#### Other sources we sync\n",
     "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
@@ -1135,7 +1136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Articles using [template](https://www.wikidata.org/wiki/Q91652187) and view statistics this year and during the [Nobel week](https://www.nobelprize.org/press/#/publication/5f1719e411aab40004a17f36/552bd85dccc8e20c00e7f979?&sh=false)  5-12 October 2020 on those articles\n",
+    "* Articles using [template](https://www.wikidata.org/wiki/Q91652187) and view statistics this year and during the [Nobel week](https://www.nobelprize.org/press/#/publication/5f1719e411aab40004a17f36/552bd85dccc8e20c00e7f979?&sh=false)  5-12 October 2020 on those articles see also [video](https://youtu.be/Iu1JtefueM8)\n",
     "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using\n",
     "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024)\n",
     "  * ca:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
