--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.4 added video and view statistics for Nobelweek 5-12 October 2020\n",
-    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
+    "# Nobel API - check Wikidata and Nobel API\n",
+    "version. 0.41 added video and view statistics for Nobelweek 5-12 October 2020\n",
+    "* This [Jupyter Notebook](https://tinyurl.com/SynchWSNobel)  \n",
     "\n",
     "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
     "  * [Developer zone nobelprize.org](https://www.nobelprize.org/about/developer-zone-2/)\n",
